portrait view completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
     <string name="froyo_circle">FroYo is premium self-serve frozen yogurt.</string>
     <string name="ice_cream">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
+
+    <string name="donut_order_message">You ordered a donut.</string>
+    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
+    <string name="froyo_order_message">You ordered a FroYo.</string>
 </resources>
