--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,11 @@
     <string name="same_day_delivery">Same day messenger service</string>
     <string name="next_day_delivery">Next day ground delivery</string>
     <string name="pickup">Pickup order</string>
+    <string-array name="labels_array">
+        <item>Home</item>
+        <item>Work</item>
+        <item>Mobile</item>
+        <item>Other</item>
+    </string-array>
+
 </resources>
