--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,11 +29,20 @@
     <string name="same_day_delivery">Same day messenger service</string>
     <string name="next_day_delivery">Next day ground delivery</string>
     <string name="pickup">Pickup order</string>
+    <string name="action_contact">Contact</string>
+    <string name="action_order">order</string>
+    <string name="action_status">Status</string>
+    <string name="action_favourites">Favourites</string>
     <string-array name="labels_array">
         <item>Home</item>
         <item>Work</item>
         <item>Mobile</item>
         <item>Other</item>
     </string-array>
+
+    <string name="action_order_message">You selected Order.</string>
+    <string name="action_status_message">You selected Status.</string>
+    <string name="action_favorites_message">You selected Favorites.</string>
+    <string name="action_contact_message">You selected Contact.</string>
 
 </resources>
