Navigation with swipe

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,12 @@
     <string name="action_copy">copy</string>
     <string name="action_paste">paste</string>
     <string name="action_delete">delete</string>
+    <string name="action_news">News</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tab_label1">Top Stories</string>
+    <string name="tab_label2">Tech News</string>
+    <string name="tab_label3">Headlines</string>
+
 
 </resources>
